src/chrome/komodo/skin/plat/win/platform.css
@import url("chrome://komodo/skin/tabs/tabs.css");
@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");


/* "workspace_splitter": A splitter used between main panes in the
 * Komodo window.
 *
 * Intentionally blank: use default splitter style.
 */

/* "multiview_splitter": A splitter used for splitting tab groups in the main
 * Komodo editor pane.
 *
 * Intentionally blank: use default splitter style.
 * TODO: Use similar style to that for gnome when have versions of
 *       "grippy_horizontal.png" and "grippy_vertical.png" that aren't so fat.
 */


/* Sidebar and editor tabs styling. */

tabpanels
{
  -moz-appearance: none;
  border: None;
  padding: 0px;
  padding-top: 2px;
  margin: 0px;
}

tabpanel
{
  -moz-appearance: none;
  border: None;
  border-top: 1px solid threedshadow;
  padding: 0px;
  margin: 0px;
}

.sidepanel tabpanels {
  border: None;
  padding: 0px;
}

/* Fix disabled autocomplete-textbox styling on Linux and Vista (bug 75996).
 * 
 * Only *specifically* doing this for non-MacOSX and for textboxes of
 * type autocomplete because for those other cases the result is a
 * properly colored hbox inside the textbox **with a white border area
 * around it that I am unable to style**.
 *
 * As well, on Mac OS X the border of the textbox is the standard (albeit
 * subtle) distinguishing UI for the readonly-ness of the textbox. The
 * current XUL theme handles that already.
 */
textbox[type="autocomplete"][disabled="true"] > hbox {
  background-color: -moz-Dialog;
}




/*---- history toolbar items
 * Based on FF back/forward buttons,
 * http://mxr.mozilla.org/firefox/source/browser/themes/winstripe/browser/browser.css#390
 */

/* unified back button with keyhole icons, small icons mode */

toolbar #historyBackButton {
  list-style-image : url("chrome://komodo/skin/images/historyToolbar.png");
  -moz-image-region: rect(0px 264px 24px 240px);
  padding-left: 0;
  padding-right: 0;
}
toolbar #historyBackButton:not([disabled="true"]):hover {
  -moz-image-region: rect(24px 264px 48px 240px);
}
toolbar #historyBackButton[disabled="true"] {
  -moz-image-region: rect(48px 264px 72px 240px);
}
toolbar #historyBackButton:not([disabled="true"]):hover:active {
  -moz-image-region: rect(72px 264px 96px 240px);
}
/* unified forward button with keyhole icons, small icons mode */

toolbar #historyForwardButton {
  list-style-image : url("chrome://komodo/skin/images/historyToolbar.png");
  -moz-image-region: rect(0px 288px 24px 264px);
  padding-left: 0;
  padding-right: 0;
}
toolbar #historyForwardButton:not([disabled="true"]):hover {
  -moz-image-region: rect(24px 288px 48px 264px);
}
toolbar #historyForwardButton[disabled="true"] {
  -moz-image-region: rect(48px 288px 72px 264px);
}
toolbar #historyForwardButton:not([disabled="true"]):hover:active {
  -moz-image-region: rect(72px 288px 96px 264px);
}

toolbar #historyRecentLocations {
  /* Image from Firefox:
  http://mxr.mozilla.org/firefox/source/browser/themes/winstripe/browser/browser.css#450
  list-style-image: url("chrome://browser/skin/Toolbar-small.png");
  */
  list-style-image : url("chrome://komodo/skin/images/Toolbar-small.png");
  -moz-image-region: rect(0px 301px 24px 288px);
}
toolbar #historyRecentLocations:not([disabled="true"]):hover {
  -moz-image-region: rect(24px 301px 48px 288px);
}
toolbar #historyRecentLocations[disabled="true"] {
  -moz-image-region: rect(48px 301px 72px 288px);
}
toolbar #historyRecentLocations:not([disabled="true"]):hover:active {
  -moz-image-region: rect(72px 301px 96px 288px);
}

